--- a/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.css
+++ b/src/app/components/modal-detalhe-pokemon/modal-detalhe-pokemon.component.css
@@ -9,24 +9,25 @@
   
    /* animação pokebola */
    .detalheBotao{
+    width: 7rem;
     background-color: rgb(24, 23, 23);
     color: white;
     border-bottom-left-radius: 50px;
     border-top-left-radius: 50px;
     border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px; 
-    padding-right:10px;
-    margin-left:45px;
+    border-bottom-right-radius: 10px;
+    padding-right: 5px; 
 }
   .poke{
+    width: 3rem;
+    height: 3rem;
     background-image: url('https://img.icons8.com/fluency/48/000000/pokeball.png');
     background-repeat: no-repeat;
     /* background-position-y: 3px; */
   }
-  .poke:hover {
+
+  .detalheBotao:hover .poke {
     background-image: url('https://img.icons8.com/color/48/000000/open-pokeball--v2.png');
-    background-repeat: no-repeat;
-    /* background-position-y: px; */
   }
 
 
