--- a/src/app/components/pokedex/pokedex.component.css
+++ b/src/app/components/pokedex/pokedex.component.css
@@ -2,6 +2,7 @@
 .card-img-top   {
     background: radial-gradient(circle, rgba(255,187,150,1) 0%, rgba(213,18,18,1) 100%);
     border: solid 5px ;
+    height: 17.87rem;
 }
 .card-body{
     background-color: silver;
@@ -38,8 +39,10 @@
 }
 
 .nav-item:hover{
+    transition: 0.5s;
     background-color: #2c4494 !important;
-    border-radius: 5px; 
+    border-radius: 5px;
+     
 }
 .bg{
     background-color:#b68f2d ;
@@ -49,15 +52,24 @@
     background-color: #2c4494;
 }
 .div-select{
-    background: #354880;
-    width: 5rem ;
+    background: #5a6892;
+    border: 3px solid #354880;;
+    width: auto ;
     height: 30px;
     font-family: Arial,Helvetica,sans-serif;
-    font-size: 15px;
     color: #fff;
     text-align: center;
-    margin: 1rem;
+    font-size: 1rem;
+    /* padding: 1rem; */
     border-radius: 5px;
+    text-align: left;
+    cursor: pointer;
+}
+.div-select:focus{
+    /* background-color: #eee; */
+    transition: 0.5s;
+    border: 3px solid #008E8F;
+    outline: 0;
 }
  /* animações */
 .card-img-top:hover{
