--- a/src/styles.css
+++ b/src/styles.css
@@ -72,7 +72,20 @@ body{
   text-align: center !important;
   border-radius: 3px !important;
   color: white ;
+  height: 1.6rem;
   padding: 6px !important;
+}
+
+.detalheBotao{
+  width: 7rem;
+  height: 3rem;
+  background-color: rgb(24, 23, 23);
+  color: white;
+  border-bottom-left-radius: 50px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-right: 5px; 
 }
 
 
